fix nav jump problem, clean up and style embed videos

--- a/assets/src/css/reset.css
+++ b/assets/src/css/reset.css
@@ -43,3 +43,23 @@ hr {
   border-top: var(--border-main);
   height: 0.05rem;
 }
+
+/* embed video */
+
+.embed-container { 
+  position: relative; 
+  padding-bottom: 56.25%; 
+  height: 0; 
+  overflow: hidden; 
+  max-width: 100%; 
+}
+
+.embed-container iframe, 
+.embed-container object, 
+.embed-container embed { 
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  width: 100%; 
+  height: 100%;
+}
